--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
 asgiref==3.4.1
+certifi==2021.5.30
+charset-normalizer==2.0.4
 Django==3.2.6
+djangorestframework==3.12.4
+furl==2.1.2
+idna==3.2
+orderedmultidict==1.0.1
 pytz==2021.1
+requests==2.26.0
+six==1.16.0
 sqlparse==0.4.1
 typing-extensions==3.10.0.0
-
-djangorestframework~=3.12.4
-furl~=2.1.2
+urllib3==1.26.6
