--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,103 @@
+addict==2.2.1
+aioredis==1.3.1
+appnope==0.1.0
 asgiref==3.4.1
+astroid==2.2.5
+async-timeout==3.0.1
+attrs==19.3.0
+autobahn==20.2.1
+Automat==0.8.0
+autopep8==1.4.4
+backcall==0.1.0
 certifi==2021.5.30
+cffi==1.14.0
+channels==2.4.0
+channels-redis==2.4.1
+chardet==3.0.4
 charset-normalizer==2.0.4
+colorama==0.4.1
+constantly==15.1.0
 coreapi==2.3.3
 coreschema==0.0.4
+cryptography==2.8
+daphne==2.4.1
+decorator==4.4.0
 Django==3.2.6
+django-cors-headers==3.1.1
+django-extensions==2.2.1
 django-filter==2.4.0
+django-jalali-date==0.3.1
+django-location-field==2.1.0
+django-rest-swagger==2.2.0
+django-stubs==1.8.0
+django-stubs-ext==0.2.0
 djangorestframework==3.12.4
+djangorestframework-stubs==1.4.0
 drf-yasg==1.20.0
 furl==2.1.2
+graphviz==0.12
+hiredis==1.0.1
+hyperlink==19.0.0
 idna==3.2
+incremental==17.5.0
 inflection==0.5.1
+ipython==7.8.0
+ipython-genutils==0.2.0
+isort==4.3.21
 itypes==1.2.0
+jdatetime==3.6.2
+jedi==0.15.1
 Jinja2==3.0.1
+kavenegar==1.1.2
+lazy-object-proxy==1.4.1
+Markdown==3.1.1
 MarkupSafe==2.0.1
+mccabe==0.6.1
+msgpack==0.6.2
+mypy==0.910
+mypy-extensions==0.4.3
+openapi-codec==1.3.2
 orderedmultidict==1.0.1
 packaging==21.0
+parso==0.5.1
+persiantools==1.5.1
+pexpect==4.7.0
+pickleshare==0.7.5
+Pillow==7.0.0
+prompt-toolkit==2.0.10
+psycopg2-binary==2.8.4
+ptyprocess==0.6.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.5.0
+pycparser==2.19
+pydotplus==2.0.2
+Pygments==2.4.2
+PyHamcrest==2.0.0
+pylint==2.3.1
+pylint-django==2.0.11
+pylint-plugin-utils==0.6
+pyOpenSSL==19.1.0
 pyparsing==2.4.7
 pytz==2021.1
+PyYAML==5.3
 requests==2.26.0
 ruamel.yaml==0.17.10
 ruamel.yaml.clib==0.2.6
+sentry-sdk==1.4.2
+service-identity==18.1.0
+simplejson==3.16.0
 six==1.16.0
 sqlparse==0.4.1
+toml==0.10.2
+traitlets==4.3.3
+Twisted==19.10.0
+txaio==20.1.1
+typed-ast==1.4.0
 typing-extensions==3.10.0.0
+tzlocal==2.1
 uritemplate==3.0.1
 urllib3==1.26.6
+wcwidth==0.1.7
+wrapt==1.11.2
+zope.interface==4.7.1
